--- a/Source/Smart Certificate KeyProvider.csproj
+++ b/Source/Smart Certificate KeyProvider.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1FBC0E45-0C76-4346-967B-10D681FB712E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Smart_Certificate_KeyProvider</RootNamespace>
-    <AssemblyName>Smart Certificate KeyProvider</AssemblyName>
+    <RootNamespace>SmartCertificateKeyProviderPlugin</RootNamespace>
+    <AssemblyName>SmartCertificateKeyProviderPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
