--- a/Source/Smart Certificate KeyProvider.csproj
+++ b/Source/Smart Certificate KeyProvider.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\GitVersionTask.5.1.3\build\GitVersionTask.props" Condition="Exists('packages\GitVersionTask.5.1.3\build\GitVersionTask.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -61,32 +62,25 @@
     <None Include="packages.config" />
     <None Include="Smart Certificate KeyProvider.ruleset" />
   </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
-    <Analyzer Include="packages\StyleCop.Analyzers.1.0.2\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\GitVersionTask.3.6.5\build\dotnet\GitVersionTask.targets" Condition="Exists('packages\GitVersionTask.3.6.5\build\dotnet\GitVersionTask.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\GitVersionTask.3.6.5\build\dotnet\GitVersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\GitVersionTask.3.6.5\build\dotnet\GitVersionTask.targets'))" />
-  </Target>
   <Target Name="WriteVersionFile" AfterTargets="Build">
     <ItemGroup>
-      <PluginVersion Include=":"/>
-      <PluginVersion Include="$(TargetName):$(GitVersion_MajorMinorPatch)"/>
-      <PluginVersion Include=":"/>
+      <PluginVersion Include=":" />
+      <PluginVersion Include="$(TargetName):$(GitVersion_MajorMinorPatch)" />
+      <PluginVersion Include=":" />
     </ItemGroup>
-    <WriteLinesToFile
-      File="$(SolutionDir)..\PluginVersion.txt"
-      Lines="@(PluginVersion)"
-      Overwrite="true"
-      Encoding="UTF-8"/>
+    <WriteLinesToFile File="$(SolutionDir)..\PluginVersion.txt" Lines="@(PluginVersion)" Overwrite="true" Encoding="UTF-8" />
   </Target>
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\GitVersionTask.5.1.3\build\GitVersionTask.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\GitVersionTask.5.1.3\build\GitVersionTask.props'))" />
+    <Error Condition="!Exists('packages\GitVersionTask.5.1.3\build\GitVersionTask.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\GitVersionTask.5.1.3\build\GitVersionTask.targets'))" />
+  </Target>
+  <Import Project="packages\GitVersionTask.5.1.3\build\GitVersionTask.targets" Condition="Exists('packages\GitVersionTask.5.1.3\build\GitVersionTask.targets')" />
 </Project>
